13th commit.added the list for the download fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pedro_purple">#9575CD</color>
     <color name="pedro_blue">#1CBBE3</color>
-    <color name="pedro_green">#04AC28</color>
+    <color name="pedro_green">#E1BB70</color>
 </resources>
