16th commit technically finished the first fragment

--- a/app/src/main/res/layout/depedro_home.xml
+++ b/app/src/main/res/layout/depedro_home.xml
@@ -9,6 +9,7 @@
 
 
     <TextView
+        android:id="@+id/txtview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
@@ -31,7 +32,6 @@
         android:layout_marginEnd="165dp"
         android:layout_marginBottom="389dp"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -61,15 +61,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="123dp"
-        android:layout_marginTop="416dp"
         android:layout_marginEnd="194dp"
-        android:layout_marginBottom="267dp"
+        android:layout_marginBottom="216dp"
         android:text="Options"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
