19th commit.trying to use a progress bar to show the download of the image

--- a/app/src/main/res/layout/hines_download.xml
+++ b/app/src/main/res/layout/hines_download.xml
@@ -12,6 +12,9 @@
         android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
+        android:outlineSpotShadowColor="@color/pedro_green"
+        android:max="5"
+        android:progress="0"
         android:layout_height="40dp" />
 
     <ListView
