--- a/app/src/main/res/layout/hines_download.xml
+++ b/app/src/main/res/layout/hines_download.xml
@@ -10,11 +10,9 @@
 
     <ProgressBar
         android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:outlineSpotShadowColor="@color/pedro_green"
-        android:max="5"
-        android:progress="0"
+        android:visibility="gone"
         android:layout_height="40dp" />
 
     <ListView
@@ -27,6 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="309dp"
         tools:src="@tools:sample/avatars" />
+
+
 
 
 </LinearLayout>
