26th commit. got the last fragment to read data from db

--- a/app/src/main/res/menu/navigation_drawer_item.xml
+++ b/app/src/main/res/menu/navigation_drawer_item.xml
@@ -22,4 +22,10 @@
         android:title="n01455125Weather"
         />
 
+    <item
+        android:id="@+id/DBScreen"
+        android:icon="@android:drawable/btn_star_big_on"
+        android:title="DBScreen"
+        />
+
 </menu>
