--- a/app/src/main/res/layout/db_screen.xml
+++ b/app/src/main/res/layout/db_screen.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".DBScreen">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/initial"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="114dp"
+        android:text="@string/hello_blank_fragment"
+        android:textAlignment="center" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/modfield_txt"
+        android:layout_width="132dp"
+        android:layout_height="73dp"
+        android:layout_below="@+id/initial"
+        android:layout_gravity="center"
+        android:text="TextView"
+        android:textAlignment="center" />
+
+    <Button
+        android:id="@+id/database_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
+
+</LinearLayout>
