--- a/app/src/main/res/layout/hines_download.xml
+++ b/app/src/main/res/layout/hines_download.xml
@@ -8,19 +8,19 @@
     tools:context=".HinesDownload">
 
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/depedro_progressBar1"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:visibility="gone"
         android:layout_height="40dp" />
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/depedro_listView1"
         android:layout_width="match_parent"
         android:layout_height="275dp" />
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/depedro_imageView1"
         android:layout_width="match_parent"
         android:layout_height="309dp"
         tools:src="@tools:sample/avatars" />
