--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/pedro_nxtColor"
     android:gravity="bottom"
     >
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="140dp"
+        android:layout_height="111dp"
+        app:srcCompat="@drawable/apartment_buidling3" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,6 +29,8 @@
         android:textSize="18dp"
         android:textAlignment="viewStart"
     />
+
+
 
 
 </LinearLayout>
