--- a/app/src/main/res/layout/n01455125_weather.xml
+++ b/app/src/main/res/layout/n01455125_weather.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pedro_blue"
-    android:id="@+id/n01455125Weather"
-    >
+    android:background="@color/pedro_blue">
 
     <TextView
         android:id="@+id/depedro_student_id_text_view"
